gl31-master/src/test/deca/context/invalid/sansobjet/directaffect_int2.deca
// Description:
//    Typage : associe "int" à un int
//
// Resultats:
//    Ligne 10: Affectation de type impossible, 'int' ne peut pas valoir "int"
//
// Historique:
//    cree le 17/01/2021
{
   int a = "int";
}
